--- a/portfolio.html
+++ b/portfolio.html
@@ -27,39 +27,123 @@
         <a href="./index.html" lang="en" class="logo header__logo link"
           >Web<span class="logo--end-black">Studio</span></a
         >
-        <nav class="header__navigation navigation">
-          <ul class="navigation__list">
+        <button
+          class="menu-toggle menu-toggle--open js-open-menu button"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="menu-toggle__icon" width="24px" height="16px">
+            <use href="./images/symbol-defs.svg#icon-menu-burger"></use>
+          </svg>
+        </button>
+        <div class="menu header__menu">
+          <nav class="menu__navigation navigation">
+            <ul class="navigation__list">
+              <li>
+                <a class="navigation__list-link link" href="./index.html">Студія</a>
+              </li>
+              <li>
+                <a
+                  class="navigation__list-link link navigation__list-link--current"
+                  href="./portfolio.html"
+                  >Портфоліо</a
+                >
+              </li>
+              <li><a class="navigation__list-link link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="menu__contacts">
             <li>
-              <a class="navigation__list-link link" href="./index.html">Студія</a>
-            </li>
-            <li>
-              <a
-                class="navigation__list-link link navigation__list-link--current"
-                href="./portfolio.html"
-                >Портфоліо</a
+              <a class="menu__contacts-link link" href="mailto:info@devstudio.com">
+                <svg class="menu__contacts-icon menu__contacts-icon--letter">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
-            <li><a class="navigation__list-link link" href="#">Контакти</a></li>
+            <li>
+              <a class="menu__contacts-link link" href="tel:+380961111111">
+                <svg class="menu__contacts-icon menu__contacts-icon--phone">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
           </ul>
-        </nav>
-        <ul class="navigation__contacts">
-          <li>
-            <a class="navigation__contacts-link link" href="mailto:info@devstudio.com">
-              <svg class="navigation__contacts-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="navigation__contacts-link link" href="tel:+380961111111">
-              <svg class="navigation__contacts-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
+      </div>
+
+      <div class="mobile-menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu button">
+          <svg class="menu-toggle__icon" width="18px" height="18px">
+            <use href="./images/symbol-defs.svg#icon-menu-close"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu">
+          <nav class="mobile-menu__navigation mobile-navigation">
+            <ul class="mobile-navigation__list">
+              <li>
+                <a class="mobile-navigation__list-link link" href="./index.html">Студія</a>
+              </li>
+              <li>
+                <a class="mobile-navigation__list-link link" href="./portfolio.html">Портфоліо</a>
+              </li>
+              <li><a class="mobile-navigation__list-link link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <div class="mobile-menu-bottom">
+            <ul class="mobile-menu__contacts">
+              <li class="mobile-menu__contacts-item">
+                <a class="mobile-menu__contacts-link link" href="tel:+380961111111">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mobile-menu__contacts-item">
+                <a class="mobile-menu__contacts-link link" href="mailto:info@devstudio.com">
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-menu__socials">
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram
+                </a>
+              </li>
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter
+                </a>
+              </li>
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook
+                </a>
+              </li>
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -294,84 +378,86 @@
 
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__contacts">
-          <a href="./index.html" lang="en" class="logo footer__logo link"
-            >Web<span class="logo--end-white">Studio</span></a
-          >
-          <address class="footer__address add">
-            <ul class="add__list">
-              <li class="add__list-item">
+        <div class="footer-contacts-join-wrap">
+          <div class="footer__contacts">
+            <a href="./index.html" lang="en" class="logo footer__logo link"
+              >Web<span class="logo--end-white">Studio</span></a
+            >
+            <address class="footer__address add">
+              <ul class="add__list">
+                <li class="add__list-item">
+                  <a
+                    class="add__list-map link"
+                    href="https://goo.gl/maps/znrV5zkPQKS67RJL6"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="add__list-item">
+                  <a class="add__list-link link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="add__list-item">
+                  <a class="add__list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__join join">
+            <b class="join__title">приєднуйтесь</b>
+            <ul class="join__socials socials">
+              <li class="socials__item">
                 <a
-                  class="add__list-map link"
-                  href="https://goo.gl/maps/znrV5zkPQKS67RJL6"
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
                   target="_blank"
-                  rel="noopener noreferrer"
-                  >м. Київ, пр-т Лесі Українки, 26</a
+                  rel="noopener noreferrer nofollow"
                 >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="add__list-item">
-                <a class="add__list-link link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
                 >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="add__list-item">
-                <a class="add__list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__join join">
-          <b class="join__title">приєднуйтесь</b>
-          <ul class="join__socials socials">
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer__subscription subscription">
           <b class="subscription__title">Підпишіться на розсилку</b>
@@ -393,5 +479,13 @@
         </div>
       </div>
     </footer>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
